Corrections Issue #10 remplacer class messageConf et messageError et correction Issue #5 scrollbars

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,6 +9,7 @@ font-family: 'Alegreya Sans', sans-serif;
 
 .main-container {
     width: 100vw;
+    height: 100vh;
     margin: 0;
     padding: 0;
     display: flex;
@@ -21,11 +22,12 @@ font-family: 'Alegreya Sans', sans-serif;
 .menu {
     width: 15vw;
     display: flex;
+    max-height: 100vh;
     flex-direction: column;
 }
 
 .logo { 
-    margin: 25px 15px 75px 15px;
+        margin: 10% 2% 25% 2%;
 }
 
 .logo img {
@@ -52,7 +54,8 @@ font-family: 'Alegreya Sans', sans-serif;
 }
 
 .menuleft li {
-    height: 75px;
+    
+    padding: 8% 0;
     width: 100%;
     border: 3px solid #e06128;
     background-color: #ffffff;
